Fixed spacing for controls

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -75,6 +75,11 @@ html, body {
     width: 15px;
 }
 
+.carousel-control-prev, .carousel-control-next {
+    width: 5%;
+    color: black !important;
+}
+
 @media only screen and (max-width: 600px) {
     .top-ribbon {
         height: 125px;
